--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/chooser": "^4.20.0",
     "@ionic-native/core": "~4.20.0",
+    "@ionic-native/http": "^4.20.0",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/sqlite": "^4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.0.0",
+    "cordova-plugin-advanced-http": "^2.2.0",
     "cordova-plugin-chooser": "^1.2.5",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -57,7 +60,10 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-advanced-http": {
+        "OKHTTP_VERSION": "3.10.0"
+      }
     },
     "platforms": [
       "android"
