--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^3.4.0",
+    "get-contrast": "^2.0.0",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
