--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/chooser": "^4.20.0",
     "@ionic-native/core": "~4.20.0",
     "@ionic-native/http": "^4.20.0",
+    "@ionic-native/screen-orientation": "^4.20.0",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/sqlite": "^4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
@@ -34,10 +35,12 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.2",
+    "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^3.4.0",
+    "es6-promise-plugin": "^4.2.2",
     "get-contrast": "^2.0.0",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
@@ -64,7 +67,8 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-advanced-http": {
         "OKHTTP_VERSION": "3.10.0"
-      }
+      },
+      "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
       "android"
