--- a/package.json
+++ b/package.json
@@ -27,19 +27,21 @@
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/sqlite": "^4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
+    "@ionic/angular": "^5.3.1",
+    "@ionic/angular-toolkit": "^2.3.0",
     "@ionic/storage": "2.2.0",
-    "cordova-android": "7.0.0",
-    "cordova-plugin-advanced-http": "^2.2.0",
-    "cordova-plugin-chooser": "^1.2.5",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "^6.0.2",
+    "cordova-android": "^9.0.0",
+    "cordova-plugin-advanced-http": "3.0.0",
+    "cordova-plugin-chooser": "1.3.2",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-file": "6.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.2",
+    "cordova-plugin-ionic-webview": "^5.0.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^3.4.0",
+    "cordova-plugin-splashscreen": "^6.0.0",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-sqlite-storage": "^5.0.1",
     "es6-promise-plugin": "^4.2.2",
     "get-contrast": "^2.0.0",
     "ionic-angular": "3.9.5",
@@ -49,26 +51,24 @@
     "zone.js": "0.8.29"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.2",
+    "@ionic/app-scripts": "^3.2.4",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-chooser": {},
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {},
+      "cordova-plugin-screen-orientation": {},
+      "cordova-plugin-device": {},
       "cordova-plugin-advanced-http": {
         "OKHTTP_VERSION": "3.10.0"
       },
-      "cordova-plugin-screen-orientation": {}
+      "cordova-plugin-chooser": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
